<resources>
    <string name="app_name">HelloWorld</string>
    <string name="Author_Info">Kassaye, Namuna 04_30_2022</string>
    <string name="button_text">ClickMe</string>
    <string name="name_input">PLEASE ENTER NAME</string>
    <string name="welcome">WELCOME</string>
    <string name="please_enter_your_name">Please enter your name</string>
    <string name="please_enter_your_user_name">Please enter your user name</string>
    <string name="please_enter_a_valid_email">Please enter a valid email</string>
    <string name="please_enter_your_user_birthday">Please enter your user birthday</string>
    <string name="back_button">BACK</string>
    <string name="submit_button">SUBMIT</string>
    <string name="sign_up">sign up</string>
    <string name="guest">guest</string>
    <string name="sign_in">sign in</string>
    <string name="thank_you_notification">Thank You For Signing up</string>
    <string name="emoji_happy">:)</string>
    <string name="thank_you_txt">\"Thanks For Signing Up \"</string>
    <string name="occupation">Please enter your occupation</string>
    <string name="description">please describe yourself</string>
    <string name="profile_picture">Profile picture</string>
    <string name="name">name</string>
    <string name="age">Age</string>
    <string name="welcome_occupation">Occupation</string>
    <string name="welcome_description">Description</string>
    <string name="please_enter_a_valid_content">please enter vlaues to the fields</string>
    <string name="eighteen_error">You must be at least 18 year old to sign up</string>
    <string name="tap_to_select_date_of_birth">Tap to select date of birth</string>
    <string name="please_enter_your_full_name">please_enter_your_full_name</string>
    <string name="reset">RESET</string>
    <string name="thanks_message">Thank You For Signing up</string>
    <string name="text_slash_symbol">/</string>
    <string name="welcome_back_button">Back</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="app_setting">App Setting</string>
    <string name="user_profile_setting">user profile setting</string>
    <string name="profile">profile</string>
    <string name="setting">setting</string>
    <string name="matches">matches</string>
    <string name="pick_date">pick date</string>
    <string name="drawer_open">open navigation drawer</string>
    <string name="drawer_close">close navigation drawer</string>
    <string name="matches_image">matches image</string>
    <string name="like_button">like</string>
    <string name="you_liked">you liked: %s</string>
    <string name="private_radio">private radio</string>
    <string name="public_radio">public radio</string>
    <string name="prefer_not_to_answer">prefer not to answer</string>
    <string name="they_them">they/them</string>
    <string name="she_her">she/her</string>
    <string name="thanks_text">Thanks for Signing Up %1$s!</string>


    <string name="selected_time">selected time</string>
    <string name="selected_time_message">Selected Time: %d:%s</string>
    <string name="select_reminder_time_title">Select Reminder Time</string>
    <string name="invalid_settings">You have inputted invalid settings</string>
    <string name="he_him">he/him</string>
    <string name="Started_Location_Updates">Started Location Update</string>
    <string name="Enable_Location">Enable Location</string>
    <string name="Location_Service">Please turn location services to use this feature</string>
    <string name="Location_Setting">Location setting</string>
</resources>