<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:contentDescription="@string/profile_picture"
        android:id="@+id/id_image"
        android:src="@color/design_default_color_primary_variant"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_above="@id/thank_you_user"
        android:layout_margin="@dimen/button_margin"/>
    <TextView
        android:id="@+id/id_name"
        android:text="@string/name"
        android:textStyle="bold"
        android:shadowColor="@color/black"
        android:textColor="@color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/id_image"
        android:layout_below="@+id/id_image"
        android:layout_margin="@dimen/text_margin"/>

    <TextView
        android:id="@+id/id_age"
        android:text="@string/age"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/id_image"
        android:layout_below="@+id/id_name"
        android:layout_margin="@dimen/text_margin"/>

    <TextView
        android:id="@+id/id_occupation"
        android:text="@string/welcom_occupation"
        android:textStyle="bold"
        android:shadowColor="@color/black"
        android:textColor="@color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/id_image"
        android:layout_below="@+id/id_age"
        android:layout_margin="@dimen/text_margin"/>

    <TextView
        android:id="@+id/id_description"
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:textStyle="bold"
        android:shadowColor="@color/black"
        android:textColor="@color/black"
        android:layout_below="@+id/id_occupation"
        android:layout_alignLeft="@id/id_image"
        android:layout_margin="@dimen/text_margin"
        android:layout_marginStart="@dimen/text_margin"
        android:layout_marginTop="@dimen/text_margin"
        android:layout_marginEnd="@dimen/text_margin"
        android:layout_marginBottom="@dimen/text_margin"
        android:text="@string/welcome_description" />

    <TextView
        android:id="@+id/thank_you_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true" />

    <Button
        android:id="@+id/button_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/id_occupation"
        android:layout_centerInParent="true"
        android:layout_marginStart="@dimen/button_margin"
        android:layout_marginTop="172dp"
        android:layout_marginEnd="@dimen/button_margin"
        android:layout_marginBottom="@dimen/button_margin"
        android:onClick="onBackClick"
        android:text="Back" />


</RelativeLayout>